News UAT/force-app/main/default/objects/Answer_to_Rule__c/Answer_to_Rule__c.object-meta.xml
<CustomObject>
    <label>Answer to Rule</label>
    <nameField>
        <displayFormat>A2R-{000000}</displayFormat>
        <label>Answer to Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer to Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>