News UAT/force-app/main/default/objects/Answer_to_Rule__c/fields/Answer2__c.field-meta.xml
<CustomField>
    <fullName>Answer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>Answer2__c</referenceTo>
    <relationshipLabel>Answer to Rules (Answer)</relationshipLabel>
    <relationshipName>Answer_to_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>