News UAT/force-app/main/default/objects/Answer_to_Rule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Answer to Rules</relationshipLabel>
    <relationshipName>Answer_to_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>