News UAT/force-app/main/default/objects/Answer_to_Rule__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Answer to Rules</relationshipLabel>
    <relationshipName>Answer_to_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>